--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="5">
         <tr>
-            <td><img src="Image/Debu.jpg" width= "125" alt="Debu's profile picture"></td>
+            <td><img src="Debu.jpg" width= "125" alt="Debu's profile picture"></td>
              <!-- "img" is a self closing tag -->
             <td><h1>Debabrata Paul</h1>
                 <p><em>Self taught <strong>Web-Developer</strong></em></p> 
